# iot-firewall

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile-parsers.old  Makefile.old  README.md  annotated.html  classApplication_1_1Application-members.html  classApplication_1_1Application.html  classApplication_1_1Application__coll__graph.md5  classApplication_1_1Application__inherit__graph.map  classCustom_1_1Custom-members.html  classCustom_1_1Custom.html  classIgnoreLoader_1_1IgnoreLoader-members.html  classIgnoreLoader_1_1IgnoreLoader.html  classIgnoreLoader_1_1IgnoreLoader__coll__graph.md5  classIgnoreLoader_1_1IgnoreLoader__inherit__graph.map  classIncludeLoader_1_1IncludeLoader-members.html  classIncludeLoader_1_1IncludeLoader.html  classIncludeLoader_1_1IncludeLoader__coll__graph.md5  classIncludeLoader_1_1IncludeLoader__inherit__graph.map  classLayer4_1_1Layer4-members.html  classLayer4_1_1Layer4.html  classLayer4_1_1Layer4__coll__graph.map  classLayer4_1_1Layer4__coll__graph.md5  classPolicy_1_1Policy-members.html  classPolicy_1_1Policy.html  classProtocol_1_1Protocol-members.html  classProtocol_1_1Protocol.html  classTransport_1_1Transport-members.html  classTransport_1_1Transport.html  classTransport_1_1Transport__coll__graph.md5  classTransport_1_1Transport__inherit__graph.map  classarp_1_1arp-members.html  classarp_1_1arp.html  classcoap_1_1coap-members.html  classcoap_1_1coap.html  classdhcp_1_1dhcp-members.html  classdhcp_1_1dhcp.html  (+438 more)
.ci_scripts/: build_project.sh  install_packages.sh  run-tests.sh
.ci_scripts/compile-and-test/: install_packages.sh  run_tests.sh
.ci_scripts/full-test/: install_packages.sh  run_cppcheck.sh  run_tests.sh  run_valgrind.sh  translate_profiles.sh
.github/workflows/: compile-and-test.yml  full-test.yml  publish-docs.yml  test-translator.yml
data/input/: dns-bug.pcap  dns.pcap  example.txt
data/traces/: .gitignore  open-app-local.pcap  single.pcap
data/traces/dhcp/: dhcp-xiaomi.pcap
data/traces/tplink-plug/: tp-link.pcap
data/traces/xiaomi-cam/: arp-request-from-gateway.pcap  https-xiaomi-cloud.pcap  open-app-local.pcap
devices/: .gitignore  CMakeLists.txt
devices/amazon-echo/: profile.yaml
devices/dlink-cam/: profile.yaml
devices/philips-hue/: profile.yaml
devices/smartthings-hub/: profile.yaml
devices/tplink-plug/: profile.yaml
devices/xiaomi-cam/: profile.yaml
include/: counters.h  dns_map.h  dns_table.h  hashmap.h  map_domain_ip.h  nfqueue.h  nft_counter.h  packet-utils.h  packet_utils.h  rule_utils.h
include/parsers/: coap.h  dhcp.h  dns.h  header.h  http.h  igmp.h  ssdp.h
parsers/include/: dns.h
parsers/src/: dns.c  dns.h  nfqueue-dns  nfqueue-dns.c  test  test.c
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+29 more)
src/: CMakeLists.txt  counters.c  dns_map.c  dns_table.c  main.c  map_domain_ip.c  nfqueue.c  nft_counter.c  packet-utils.c  packet_utils.c  rule_utils.c
src/devices/: .gitignore  CMakeLists.txt
src/devices/xiaomi-cam/: CMakeLists.txt  firewall.nft  profile.yaml  xiaomi-cam.c  xiaomi-cam.nft
src/devices/xiaomi-cam/nfqueues/: 1-dhcp.c  2-dns.c  dhcp.c  dns.c  http.c  open-app-local.c
src/parsers/: CMakeLists.txt  coap.c  dhcp.c  dns.c  header.c  http.c  igmp.c  ssdp.c
src/translator/: .gitignore  IncludeLoader.py  Policy.py  create_interface.sh  profile.yaml  translator.py
src/translator/protocols/: Application.py  Custom.py  Layer4.py  Protocol.py  Transport.py  arp.py  coap.py  create_interface.sh  dhcp.py  dns.py  http.py  icmp.py  igmp.py  ip.py  ipv4.py  ipv6.py  ssdp.py  tcp.py  udp.py
src/translator/templates/: CMakeLists.txt.j2  callback.c.j2  firewall.nft.j2  header.c.j2  main.c.j2
src/translator/yaml_loaders/: IgnoreLoader.py  IncludeLoader.py  test.py  test.yaml
test/: CMakeLists.txt  Vagrantfile  basic-queue.c  counters.c  dns_map.c  dns_table.c  firewall.nft  map_domain_ip.c  nfqueue.c  nft_counter.c  packet_utils.c  rule_utils.c
test/devices/: CMakeLists.txt
test/devices/xiaomi-cam/: CMakeLists.txt  dns.pkt  firewall.nft  nfqueue.c
test/dns/: CMakeLists.txt  print-dns.c
test/parsers/: CMakeLists.txt  coap.c  dhcp.c  dns.c  header.c  http.c  igmp.c  ssdp.c
test/test-device/: CMakeLists.txt  firewall.nft  profile.yaml
test/test-device/nfqueues/: test-queue.c
tests/: nfqueue-test.c
